<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activities.FormRegisterActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/dimens_10dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/dimens_10dp" />

        <TextView
            android:id="@+id/txt_personal_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_10dp"
            android:drawablePadding="@dimen/dimens_10dp"
            android:text="@string/txt_personal_data"
            android:textSize="@dimen/dimens_24sp"
            app:drawableStartCompat="@drawable/ic_person_add"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_full_name_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_20dp"
            app:helperTextTextColor="@color/design_default_color_error"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/txt_personal_data">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_full_name"
                android:imeOptions="actionNext"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_cpf_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/dimens_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16dp"
            app:helperTextTextColor="@color/design_default_color_error"
            app:layout_constraintEnd_toEndOf="@id/edt_full_name_layout"
            app:layout_constraintStart_toStartOf="@id/edt_full_name_layout"
            app:layout_constraintTop_toBottomOf="@+id/edt_full_name_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_cpf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_cpf"
                android:imeOptions="actionNext"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_phone_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/dimens_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16dp"
            app:layout_constraintEnd_toEndOf="@id/edt_cpf_layout"
            app:layout_constraintStart_toStartOf="@id/edt_cpf_layout"
            app:layout_constraintTop_toBottomOf="@+id/edt_cpf_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/telefone_com_ddd"
                android:imeOptions="actionNext"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_email_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/dimens_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16dp"
            app:layout_constraintEnd_toEndOf="@id/edt_phone_layout"
            app:layout_constraintStart_toStartOf="@id/edt_phone_layout"
            app:layout_constraintTop_toBottomOf="@id/edt_phone_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_password_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16dp"
            app:layout_constraintEnd_toEndOf="@id/edt_email_layout"
            app:layout_constraintStart_toStartOf="@id/edt_email_layout"
            app:layout_constraintTop_toBottomOf="@+id/edt_email_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimens_10dp"
            android:text="@string/txt_register"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/edt_password_layout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>